add getting rooms of the specific resort
