# src/main/resources/api/api.yml
@@ -235,6 +235,33 @@ paths:
                 '503':
                     description: "Database connection failed"
 
+    /resort/{resort-name}/rooms:
+        get:
+            tags:
+                - "resort"
+            summary: "Get resort rooms"
+            description: "Get resort rooms"
+            operationId: "getResortRooms"
+            parameters:
+                -   name: resort-name
+                    in: path
+                    required: true
+                    schema:
+                        type: string
+            responses:
+                '200':
+                    description: 'Operation successful'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/detailedRoomPayloadList'
+                '400':
+                    description: "Bad request"
+                '500':
+                    description: "Internal server error"
+                '503':
+                    description: "Database connection failed"
+
     /resort/owner/{email}:
         get:
             tags:
